--- a/sources/.env.test
+++ b/sources/.env.test
@@ -6,7 +6,7 @@ HTTP_REST_PORT=8000
 HTTP_DEBUG=true
 
 # MongoDB datasource configs
-MONGO_HOST=database
-MONGO_PORT=3306
-MONGO_USERNAME=root
-MONGO_PASSWORD=root
+MONGO_HOST=
+MONGO_PORT=
+MONGO_USERNAME=
+MONGO_PASSWORD=
