--- a/sources/package.json
+++ b/sources/package.json
@@ -35,37 +35,31 @@
         "dist"
     ],
     "dependencies": {
-        "@loopback/authentication": "^4.2.6",
-        "@loopback/authorization": "^0.5.11",
-        "@loopback/boot": "^2.3.2",
-        "@loopback/context": "^3.8.2",
-        "@loopback/core": "^2.7.1",
-        "@loopback/repository": "^2.6.0",
-        "@loopback/rest": "^5.1.0",
-        "@loopback/security": "^0.2.11",
-        "@loopback/service-proxy": "^2.3.1",
-        "axios": "^0.19.2",
+        "@loopback/authentication": "^4.2.7",
+        "@loopback/authorization": "^0.6.0",
+        "@loopback/boot": "^2.3.3",
+        "@loopback/context": "^3.9.0",
+        "@loopback/core": "^2.8.0",
+        "@loopback/repository": "^2.7.0",
+        "@loopback/rest": "^5.1.1",
+        "@loopback/rest-explorer": "^2.2.4",
+        "@loopback/security": "^0.2.12",
         "better-module-alias": "^1.0.4",
         "dotenv-safe": "^6.1.0",
-        "jalali-moment": "^3.3.4",
         "loopback-component-cascade": "^0.1.0",
-        "loopback-component-crud": "^0.10.0",
-        "loopback-component-filter": "^0.4.0",
-        "loopback-component-history": "^0.7.0",
-        "loopback-component-storage": "^3.7.0",
-        "loopback-connector-mysql": "^5.4.2",
-        "loopback-connector-rest": "^3.6.0",
-        "loopback-connector-soap": "^5.1.0",
-        "persianjs": "^0.4.0",
+        "loopback-component-crud": "^0.11.0",
+        "loopback-component-filter": "^0.5.0",
+        "loopback-component-history": "^0.8.0",
+        "loopback-connector-mongodb": "^5.2.3",
         "tslib": "^2.0.0"
     },
     "devDependencies": {
-        "@loopback/build": "^5.4.2",
-        "@loopback/testlab": "^3.1.6",
-        "@types/node": "^10.17.24",
+        "@loopback/build": "^5.4.3",
+        "@loopback/testlab": "^3.1.7",
+        "@types/node": "^10.17.26",
         "nodemon": "^2.0.4",
         "ts-node": "^8.10.2",
-        "typescript": "~3.9.3"
+        "typescript": "~3.9.5"
     },
     "_moduleAliases": {
         "~": "./dist"
