--- a/sources/.env.test
+++ b/sources/.env.test
@@ -6,7 +6,4 @@ HTTP_REST_PORT=8000
 HTTP_DEBUG=true
 
 # MongoDB datasource configs
-MONGO_HOST=
-MONGO_PORT=
-MONGO_USERNAME=
-MONGO_PASSWORD=
+MONGODB_URL=
