feat: add auth0 jwks

--- a/sources/package.json
+++ b/sources/package.json
@@ -44,8 +44,11 @@
         "@loopback/rest": "^5.1.1",
         "@loopback/rest-explorer": "^2.2.4",
         "@loopback/security": "^0.2.12",
+        "@types/jsonwebtoken": "^8.5.0",
         "better-module-alias": "^1.0.4",
         "dotenv-safe": "^6.1.0",
+        "jsonwebtoken": "^8.5.1",
+        "jwks-rsa": "^1.8.0",
         "loopback-component-cascade": "^0.1.0",
         "loopback-component-crud": "^0.11.0",
         "loopback-component-filter": "^0.5.0",
